--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^1.18.9",
     "pixi-viewport": "^3.17.0",
     "pixi.js": "^5.0.0-rc",
+    "ts-keycode-enum": "^1.0.6",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.0.2",
     "typescript": "^3.3.3",
