--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eventemitter3": "^4.0.7",
     "express": "^4.16.4",
     "express-basic-auth": "^1.1.6",
-    "express-jwt": "^5.3.1"
+    "express-jwt": "^5.3.1",
+    "gsap": "^3.5.1"
   }
 }
