--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "express": "^4.16.4",
     "express-basic-auth": "^1.1.6",
     "express-jwt": "^5.3.1",
-    "gsap": "^3.5.1"
+    "gsap": "^3.5.1",
+    "uuid": "^8.3.2",
+    "uuid4": "^2.0.2"
   }
 }
