--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.9",
+    "pixi-filters": "^3.2.2",
     "pixi-viewport": "^3.17.0",
     "pixi.js": "^5.0.0-rc",
     "ts-keycode-enum": "^1.0.6",
