--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "image-clipper": "^0.4.4",
     "nodemon": "^1.18.9",
     "pixi-filters": "^3.2.2",
     "pixi-viewport": "^3.17.0",
