--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "debug": "^4.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
+    "fontfaceobserver": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
     "image-clipper": "^0.4.4",
     "nodemon": "^1.18.9",
