--- a/tsconfig-client.json
+++ b/tsconfig-client.json
@@ -1,16 +1,20 @@
 {
-    "compilerOptions": {
-        "outDir": "lib",
-        "module": "commonjs",
-        "experimentalDecorators": true,
-        "lib": ["es6", "dom"],
-        "jsx": "react",
-        "target": "es5",
-        "declaration": true,
-        "noImplicitAny": false,
-        "sourceMap": false
-    },
-    "include": [
-      "src/network/client/**/*.ts",
-    ]
+  "compilerOptions": {
+    "outDir": "lib",
+    "module": "commonjs",
+    "experimentalDecorators": true,
+    "lib": [
+      "es6",
+      "dom"
+    ],
+    "jsx": "react",
+    "target": "es5",
+    "declaration": true,
+    "downlevelIteration": true,
+    "noImplicitAny": false,
+    "sourceMap": false
+  },
+  "include": [
+    "src/network/client/**/*.ts",
+  ]
 }
