--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,24 @@
 {
   "compilerOptions": {
-      "outDir": "lib",
-      "module": "commonjs",
-      "lib": ["es5"],
-      "target": "es2015",
-      "declaration": true,
-      "experimentalDecorators": true,
-      "noImplicitAny": false,
-      "esModuleInterop": true,
-      "strict": true,
-      "sourceMap": false,
-      "paths": {
-        // "@/*": [
-        //   "src/*"
-        // ]
-      },
+    "outDir": "lib",
+    "module": "commonjs",
+    "lib": [
+      "es6",
+      "dom"
+    ],
+    "target": "es2015",
+    "declaration": true,
+    "experimentalDecorators": true,
+    "downlevelIteration": true,
+    "noImplicitAny": false,
+    "esModuleInterop": true,
+    "strict": true,
+    "sourceMap": false,
+    "paths": {
+      // "@/*": [
+      //   "src/*"
+      // ]
+    },
   },
   "include": [
     "src/server/**/*.ts"
