--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "heroku-postbuild": "tsc && webpack",
     "start": "node ./lib/index.js",
     "dev": "nodemon",
+    "serve": "npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Endel Dreyer",
