--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 node_modules
 .cache
 dist
-.DS_Store
-*/.DS_Store
-**/*/.DS_Store
 *.code-workspace
 .vscode/
+
+# Ignore Mac DS_Store files
+.DS_Store
+**/.DS_Store
