--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "lib",
     "module": "commonjs",
     "lib": [
@@ -15,9 +16,7 @@
     "strict": true,
     "sourceMap": false,
     "paths": {
-      // "@/*": [
-      //   "src/*"
-      // ]
+        "@/*": ["/src/*"]
     },
   },
   "include": [
