Added tsyringe, UserProfile, singleton instance, PlayerBadgeFloat skele, deleted unneeded spriteutilitis

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "target": "es2015",
     "declaration": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "downlevelIteration": true,
     "noImplicitAny": false,
     "esModuleInterop": true,
