--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "express-basic-auth": "^1.1.6",
     "express-jwt": "^5.3.1",
     "gsap": "^3.5.1",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.6.0",
     "uuid": "^8.3.2",
     "uuid4": "^2.0.2"
   }
