Not sure.. MusicManager boilerplate etc

--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "@colyseus/monitor": "^0.11.0",
     "@colyseus/social": "^0.10.0",
     "@pixi/sound": "^4.0.2",
+    "audic": "^3.0.0",
     "colyseus": "^0.14.0",
     "colyseus.js": "^0.14.0",
     "eventemitter3": "^4.0.7",
     "express": "^4.16.4",
     "express-basic-auth": "^1.1.6",
     "express-jwt": "^5.3.1",
+    "glob": "^7.1.7",
     "gsap": "^3.5.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.6.0",
