--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "pixi-filters": "^3.2.2",
     "pixi-viewport": "^3.17.0",
     "pixi.js": "^5.0.0-rc",
-    "rxjs": "^7.4.0",
     "ts-keycode-enum": "^1.0.6",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.0.2",
@@ -55,6 +54,7 @@
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.6.0",
     "uuid": "^8.3.2",
-    "uuid4": "^2.0.2"
+    "uuid4": "^2.0.2",
+    "rxjs": "^7.4.0"
   }
 }
