--- a/package.json
+++ b/package.json
@@ -52,9 +52,10 @@
     "glob": "^7.1.7",
     "gsap": "^3.5.1",
     "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.4.0",
     "tsyringe": "^4.6.0",
     "uuid": "^8.3.2",
     "uuid4": "^2.0.2",
-    "rxjs": "^7.4.0"
+    "uuidv4": "^6.2.12"
   }
 }
