--- a/tsconfig-client.json
+++ b/tsconfig-client.json
@@ -12,7 +12,9 @@
     "declaration": true,
     "downlevelIteration": true,
     "noImplicitAny": false,
-    "sourceMap": false
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": [
     "src/network/client/**/*.ts",
