--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,14 @@
     ],
     "target": "es2015",
     "declaration": true,
+    "resolveJsonModule": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "downlevelIteration": true,
     "noImplicitAny": false,
     "esModuleInterop": true,
     "strict": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "paths": {
         "@/*": ["/src/*"]
     },
